fix spacing on artist videos

--- a/harmonix-client/src/pagelets-harmonix/2CheckItOut/CheckItOut.css
+++ b/harmonix-client/src/pagelets-harmonix/2CheckItOut/CheckItOut.css
@@ -12,6 +12,7 @@
   /* padding: 5rem; */
   /* margin: 0 auto; */
   width: 100%;
+  margin: 1% auto;
 }
 .spacer-container {
   margin: 50px 0px;
